idea/testData/multiModuleHighlighting/multiplatform/depends/a/common.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'My' has no actual declaration in module a">My</error>
expect fun <error descr="[NO_ACTUAL_FOR_EXPECT] Expected function 'bar' has no actual declaration in module a">bar</error>()